--- a/src/components/ForgotPassword/ForgotPasswordPage.module.css
+++ b/src/components/ForgotPassword/ForgotPasswordPage.module.css
@@ -73,7 +73,7 @@
 }
 
 .error {
-    color: #ff0000;
+    color: #120364;
     font-family: 'Original Surfer', cursive;
     font-size: 14px;
     margin-top: 8px; 
