--- a/src/components/AddTask/AddTask.module.css
+++ b/src/components/AddTask/AddTask.module.css
@@ -98,19 +98,29 @@
     position: absolute;
     left: 0;
     top: -5px;
+    cursor: pointer;
 }
 
-.checkmarkIcon {
+.submitButton {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
     width: 100px;
     height: 100px;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%); 
+    transform: translateX(-50%);
     top: -15px;
 }
 
-.actionButtons img {
-    cursor: pointer;
+.submitButton:focus {
+    outline: none;
+}
+
+.checkmarkIcon {
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
@@ -126,6 +136,7 @@
     width: 100%;
     padding: 5px 0;     
 }
+
 .successPopup {
     position: fixed;
     top: 0;
@@ -171,6 +182,7 @@
 .okButton:hover {
     background: #15e895;
 }
+
 .errorInput {
     border: 2px solid #ff6b6b !important;
     animation: shake 0.5s;
