--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -33,13 +33,13 @@ body {
 .top-header {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   position: relative;
 }
 
-.user-profile {
+/* .user-profile {
   display: flex;
   align-items: flex-start;
   margin-top: 40px;
@@ -87,7 +87,7 @@ body {
   text-align: center;
   box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.25);
   margin-left: 50px;
-}
+} */
 
 .logout-button {
   background-color: #86F6F8;
