--- a/src/components/ForgotPassword/ForgotPasswordPage.module.css
+++ b/src/components/ForgotPassword/ForgotPasswordPage.module.css
@@ -71,7 +71,7 @@
 }
 
 .error {
-    color: #120364;
+    color: #0832bb;
     font-family: 'Original Surfer', cursive;
     font-size: 14px;
     margin-top: 8px; 
@@ -130,7 +130,7 @@
 .infoText {
     font-family: 'Original Surfer', cursive;
     font-size: 14px;
-    color: #555;
+    color: #010130;
     text-align: center;
     margin-top: -8px;
     margin-bottom: 8px;
@@ -223,4 +223,17 @@
 .backToLoginLink:hover {
     color: #0066cc;
     text-decoration: underline;
+}
+
+.footerText {
+  width: 100%;
+  font-family: 'Inika', serif;
+  font-size: 15px;
+  text-align: center;
+  color: #645270;
+  letter-spacing: 2px;
+  padding: 10px 0;
+  position: absolute; /* Зберігаємо absolute для десктопа */
+  bottom: 30px; 
+  left: 0; 
 }
